grammar.js
    source_file: ($) =>
      choice(
        prec(2, $._script_file),
        alias($.query_block, $.query),
        $._query_then_command_file,
      ),
    _script_file: ($) =>
      seq(
        optional(choice($.script_query_prefix, $.script_preamble)),
        repeat($.script_annotation),
        $.management_command,
        repeat(
          choice(
            $.script_annotation,
            $.script_query_prefix,
            $.script_preamble,
            alias($.management_command_continuation, $.management_command),
          ),
        ),
      ),
    _query_then_command_file: ($) =>
      seq(
        alias($.query_block, $.query),
        $.management_command,
        repeat(alias($.management_command_continuation, $.management_command)),
      ),
    query: ($) => $.query_block,
    statement: ($) =>
      choice(
        $.alias_database_statement,
        $.declare_pattern_statement,
        $.declare_query_parameters_statement,
        $.let_statement,
        $.query_statement,
        $.restrict_access_statement,
        $.set_statement,
      ),

    query_statement: ($) => prec(-1, field("expression", $.expression)),

    expression: ($) => $.pipe_expression,
    pipe_expression: ($) =>
      seq(
        field("expression", $.before_pipe_expression),
        repeat($.piped_operator),
      ),
    piped_operator: ($) =>
      seq("|", field("operator", $.after_pipe_operator)),
    before_pipe_expression: ($) =>
      choice(
        $.before_or_after_pipe_operator,
        $.print_operator,
        $.macro_expand_operator,
        $.range_expression,
        $.entity_group_expression,
        $.scoped_function_call_expression,
        $.unnamed_expression,
      ),
    after_pipe_operator: ($) =>
      choice(
        $.as_operator,
        $.assert_schema_operator,
        $.consume_operator,
        $.count_operator,
        $.distinct_operator,
        $.execute_and_cache_operator,
        $.extend_operator,
        $.facet_by_operator,
        $.find_operator,
        $.fork_operator,
        $.get_schema_operator,
        $.graph_mark_components_operator,
        $.graph_match_operator,
        $.graph_shortest_paths_operator,
        $.graph_to_table_operator,
        $.invoke_operator,
        $.join_operator,
        $.lookup_operator,
        $.make_graph_operator,
        $.make_series_operator,
        $.mvexpand_operator,
        $.mvapply_operator,
        $.evaluate_operator,
        $.parse_operator,
        $.parse_kv_operator,
        $.parse_where_operator,
        $.partition_operator,
        $.partition_by_operator,
        $.project_operator,
        $.project_away_operator,
        $.project_rename_operator,
        $.project_reorder_operator,
        $.project_keep_operator,
        $.reduce_by_operator,
        $.render_operator,
        $.sample_operator,
        $.sample_distinct_operator,
        $.scan_operator,
        $.search_operator,
        $.serialize_operator,
        $.sort_operator,
        $.summarize_operator,
        $.take_operator,
        $.top_hitters_operator,
        $.top_operator,
        $.top_nested_operator,
        $.union_operator,
        $.where_operator,
      ),
    scoped_function_call_expression: ($) =>
      seq(
        field("scope", $.simple_name_reference),
        ".",
        field("function_call", $.function_call_expression),
      ),
    print_operator: ($) =>
      seq(
        "print",
        $.named_expression,
        repeat(seq(",", $.named_expression)),
      ),
    take_operator: ($) =>
      seq(
        choice("take", "limit"),
        repeat($.strict_query_operator_parameter),
        $.named_expression,
      ),
    union_operator: ($) =>
      seq(
        "union",
        repeat($.relaxed_query_operator_parameter),
        $.union_operator_expression,
        repeat(seq(",", $.union_operator_expression)),
      ),
    union_operator_expression: ($) =>
      choice($.wildcarded_entity_expression, $.entity_name_reference, $.parenthesized_expression),
    where_operator: ($) =>
      seq(
        choice("where", "filter"),
        repeat($.strict_query_operator_parameter),
        field("predicate", $.named_expression),
      ),
    named_expression: ($) =>
      seq(
        optional(seq($.named_expression_name_clause, "=")),
        $.unnamed_expression,
      ),
    named_expression_name_clause: ($) =>
      choice(
        $.identifier_or_extended_keyword_or_escaped_name,
        seq(
          "(",
          $.identifier_or_extended_keyword_or_escaped_name,
          repeat(seq(",", $.identifier_or_extended_keyword_or_escaped_name)),
          ")",
        ),
      ),

    unnamed_expression: ($) => $.logical_or_expression,
    logical_or_expression: ($) =>
      prec.left(
        1,
        seq($.logical_and_expression, repeat(seq("or", $.logical_and_expression))),
      ),
    logical_and_expression: ($) =>
      prec.left(
        2,
        seq($.equality_expression, repeat(seq("and", $.equality_expression))),
      ),
    equality_expression: ($) =>
      choice(
        $.star_equality_expression,
        seq(
          $.relational_expression,
          choice("==", "<>", "!="),
          $.relational_expression,
        ),
        seq(
          $.relational_expression,
          choice("in", "!in", "in~", "!in~", "has_any", "has_all"),
          "(",
          $.invocation_expression,
          repeat(seq(",", $.invocation_expression)),
          ")",
        ),
        seq(
          $.relational_expression,
          choice("between", "!between"),
          "(",
          $.invocation_expression,
          "..",
          $.invocation_expression,
          ")",
        ),
        $.relational_expression,
      ),
    star_equality_expression: ($) =>
      seq("*", "==", $.relational_expression),
    relational_expression: ($) =>
      prec.left(
        3,
        seq(
          $.additive_expression,
          optional(seq(choice("<", ">", "<=", ">="), $.additive_expression)),
        ),
      ),
    additive_expression: ($) =>
      prec.left(
        4,
        seq(
          $.multiplicative_expression,
          repeat(seq(choice("+", "-"), $.multiplicative_expression)),
        ),
      ),
    multiplicative_expression: ($) =>
      prec.left(
        5,
        seq(
          $.string_operator_expression,
          repeat(seq(choice("*", "/", "%"), $.string_operator_expression)),
        ),
      ),
    string_operator_expression: ($) =>
      choice(
        $.string_binary_operator_expression,
        $.string_star_operator_expression,
      ),
    string_binary_operator_expression: ($) =>
      seq(
        $.invocation_expression,
        optional(
          seq(
            choice($.string_binary_operator, ":"),
            $.invocation_expression,
          ),
        ),
      ),
    string_star_operator_expression: ($) =>
      seq("*", $.string_binary_operator, $.invocation_expression),
    string_binary_operator: ($) =>
      choice(
        "=~",
        "!~",
        "has",
        "!has",
        "has_cs",
        "!has_cs",
        "hasprefix",
        "!hasprefix",
        "hasprefix_cs",
        "!hasprefix_cs",
        "hassuffix",
        "!hassuffix",
        "hassuffix_cs",
        "!hassuffix_cs",
        "like",
        "likecs",
        "notlike",
        "notlikecs",
        "contains",
        "containscs",
        "notcontains",
        "notcontainscs",
        "!contains",
        "contains_cs",
        "!contains_cs",
        "startswith",
        "!startswith",
        "startswith_cs",
        "!startswith_cs",
        "endswith",
        "!endswith",
        "endswith_cs",
        "!endswith_cs",
        "matches regex",
      ),
    invocation_expression: ($) =>
      seq(optional(choice("+", "-")), $.function_call_or_path_expression),
    function_call_or_path_expression: ($) =>
      choice(
        $.function_call_or_path_path_expression,
        $.function_call_or_path_root,
      ),
    function_call_or_path_root: ($) =>
      choice(
        $.dot_composite_function_call_expression,
        $.primary_expression,
        $.to_scalar_expression,
        $.to_table_expression,
      ),
    to_scalar_expression: ($) =>
      seq(
        "toscalar",
        optional($.no_optimization_parameter),
        "(",
        field("expression", $.pipe_expression),
        ")",
      ),
    to_table_expression: ($) =>
      seq(
        "totable",
        optional($.no_optimization_parameter),
        "(",
        field("expression", $.pipe_expression),
        ")",
      ),
    no_optimization_parameter: ($) =>
      seq("kind", "=", "nooptimization"),
    dot_composite_function_call_expression: ($) =>
      prec.left(
        seq(
          $.function_call_expression,
          repeat(seq(".", $.function_call_expression)),
        ),
      ),
    function_call_expression: ($) =>
      choice($.named_function_call_expression, $.count_expression),
    named_function_call_expression: ($) =>
      seq(
        field("name", $.simple_name_reference),
        "(",
        optional(seq($.argument_expression, repeat(seq(",", $.argument_expression)))),
        ")",
      ),
    argument_expression: ($) => choice($.named_expression, $.star_expression),
    primary_expression: ($) =>
      choice(
        $.unsigned_literal_expression,
        $.name_reference_with_data_scope,
        $.data_table_expression,
        $.external_data_expression,
        $.contextual_data_table_expression,
        $.materialized_view_combine_expression,
        $.parenthesized_expression,
      ),
    name_reference_with_data_scope: ($) =>
      seq($.simple_name_reference, optional($.data_scope_clause)),
    wildcarded_entity_expression: ($) =>
      choice(
        $.wildcarded_name_reference,
        $.dot_composite_function_call_expression,
        $.wildcarded_path_expression,
      ),
    wildcarded_path_expression: ($) =>
      seq(
        $.dot_composite_function_call_expression,
        ".",
        field("name", $.wildcarded_path_name),
      ),
    wildcarded_path_name: ($) =>
      choice($.wildcarded_name, $.entity_name),
    row_schema: ($) =>
      seq(
        "(",
        optional(
          seq(
            $.row_schema_column_declaration,
            repeat(seq(",", $.row_schema_column_declaration)),
          ),
        ),
        optional(","),
        ")",
      ),
    row_schema_column_declaration: ($) =>
      seq($.parameter_name, ":", $.scalar_type),
    external_data_expression: ($) =>
      seq(
        choice("externaldata", "external_data"),
        repeat($.relaxed_query_operator_parameter),
        $.row_schema,
        "[",
        $.string_literal_expression,
        repeat(seq(",", $.string_literal_expression)),
        "]",
        optional($.external_data_with_clause),
      ),
    external_data_with_clause: ($) =>
      seq(
        "with",
        "(",
        optional(
          seq(
            $.external_data_with_clause_property,
            repeat(seq(",", $.external_data_with_clause_property)),
            optional(","),
          ),
        ),
        ")",
      ),
    external_data_with_clause_property: ($) =>
      seq(
        $.parameter_name,
        "=",
        choice(
          $.string_literal_expression,
          $.long_literal_expression,
          $.real_literal_expression,
          $.boolean_literal_expression,
          $.date_time_literal_expression,
          $.type_literal_expression,
          $.guid_literal_expression,
          $.raw_guid_literal_expression,
          $.parameter_name,
        ),
      ),
    scalar_type: ($) =>
      choice(
        "bool",
        "boolean",
        "date",
        "datetime",
        "decimal",
        "double",
        "dynamic",
        "guid",
        "int",
        "int64",
        "int8",
        "long",
        "real",
        "string",
        "time",
        "timespan",
        "uniqueid",
      ),
    parameter_name: ($) => $.identifier_or_extended_keyword_or_escaped_name,
    simple_name_reference: ($) => $.identifier_or_keyword_or_escaped_name,
    identifier_or_keyword_or_escaped_name: ($) =>
      choice($.identifier_name, $.keyword_name, $.escaped_name),
    identifier_or_extended_keyword_or_escaped_name: ($) =>
      choice(
        $.identifier_name,
        $.keyword_name,
        $.extended_keyword_name,
        $.escaped_name,
      ),
    identifier_name: ($) =>
      choice(alias($._digit_leading_identifier, $.identifier), $.identifier),
    keyword_name: ($) =>
      choice(
        "access",
        "aggregations",
        "alias",
        "all",
        "axes",
        "base",
        "bin",
        "bool",
        "cluster",
        "database",
        "declare",
        "default",
        "delta",
        "edges",
        "evaluate",
        "execute",
        "facet",
        "fork",
        "from",
        "guid",
        "hidden",
        "hot",
        "hotdata",
        "hotindex",
        "id",
        "into",
        "legend",
        "let",
        "linear",
        "log",
        "lookup",
        "list",
        "map",
        "nodes",
        "none",
        "null",
        "nulls",
        "on",
        "optional",
        "output",
        "pack",
        "partition",
        "__partitionby",
        "pattern",
        "plugin",
        "query_parameters",
        "range",
        "reduce",
        "replace",
        "render",
        "restrict",
        "series",
        "stacked",
        "stacked100",
        "step",
        "threshold",
        "typeof",
        "unstacked",
        "uuid",
        "view",
        "visible",
        "with",
        "xaxis",
        "xcolumn",
        "xmax",
        "xmin",
        "xtitle",
        "yaxis",
        "ycolumns",
        "ymax",
        "ymin",
        "ytitle",
        "ysplit",
      ),
    wildcarded_name: ($) =>
      seq(
        optional(choice($.identifier, $.keyword_name, $.extended_keyword_name)),
        "*",
        repeat(
          choice(
            $.identifier,
            $.keyword_name,
            $.extended_keyword_name,
            $.long_literal_expression,
            "*",
          ),
        ),
      ),

    unsigned_literal_expression: ($) =>
      choice(
        $.long_literal_expression,
        $.int_literal_expression,
        $.real_literal_expression,
        $.decimal_literal_expression,
        $.date_time_literal_expression,
        $.time_span_literal_expression,
        $.boolean_literal_expression,
        $.guid_literal_expression,
        $.raw_guid_literal_expression,
        $.type_literal_expression,
        $.string_literal_expression,
        $.dynamic_literal_expression,
      ),
    long_literal_expression: ($) =>
      choice(
        $.integer_literal,
        token(
          prec(4, seq(choice("long", "int64"), "(", /[^)]*/, ")")),
        ),
      ),
    int_literal_expression: ($) =>
      token(prec(4, seq(choice("int", "int32"), "(", /[^)]*/, ")"))),
    real_literal_expression: ($) =>
      choice(
        $.real_number,
        token(
          prec(4, seq(choice("real", "double"), "(", /[^)]*/, ")")),
        ),
      ),
    decimal_literal_expression: ($) =>
      token(prec(4, seq("decimal", "(", /[^)]*/, ")"))),
    date_time_literal_expression: ($) =>
      token(prec(4, seq("datetime", "(", /[^)]*/, ")"))),
    time_span_literal_expression: ($) =>
      choice(
        $.time_span_literal,
        token(prec(4, seq(choice("time", "timespan"), "(", /[^)]*/, ")"))),
      ),
    dynamic_literal_expression: ($) =>
      seq("dynamic", "(", field("value", $.json_value), ")"),
    json_value: ($) =>
      choice(
        $.json_array,
        $.json_boolean,
        $.json_date_time,
        $.json_guid,
        $.json_long,
        $.json_null,
        $.json_object,
        $.json_real,
        $.json_string,
        $.json_time_span,
        $.dynamic_literal_expression,
      ),
